--- a/MiraiConsultMVC/Views/User/Changepassword.cshtml
+++ b/MiraiConsultMVC/Views/User/Changepassword.cshtml
@@ -26,21 +26,21 @@
                     @if (!String.IsNullOrEmpty(ViewBag.errorMsg))
                     {
                         <div id="message" class="alert alert-error">
-                            <label id="lblError">@ViewBag.errorMsg</label>
+                            <label id="lblError" class="error_message_color">@ViewBag.errorMsg</label>
                         </div>
                     }
                     @if (!String.IsNullOrEmpty(ViewBag.success))
                     {
                         <div id="message" class="alert alert-success"   >
-                            <label id="lblError">@ViewBag.success</label>
+                            <label id="lblError" class="success_message_color">@ViewBag.success</label>
                         </div>
                     }
                 </div>
             </div>
             <br />
-@using  (Html.BeginForm())
+            @using  (Html.BeginForm())
                     {
-     @Html.AntiForgeryToken()
+                         @Html.AntiForgeryToken()
                          @Html.ValidationSummary(true)
             <div class="row-fluid">
                 <div class="span12">
@@ -48,7 +48,7 @@
                         <label for="password" class="required">Current Password:</label>
                     </div>
                     <div class="span8 pull-right controls-right-padding btn-padding-left">
-                        @Html.TextBoxFor(m => m.currentPassword, new { @class = "input-block-level gray-border", type="password",  maxlength = "30",  placeholder = "Current Password" })
+                        @Html.TextBoxFor(m => m.currentPassword, new { @class = "input-block-level gray-border contact_margin", type = "password", maxlength = "30", placeholder = "Current Password" })
                         @Html.ValidationMessageFor(m => m.currentPassword, string.Empty, new { @class = "validation-summary-errors" })
                         <br/>
                     </div>
@@ -61,7 +61,7 @@
                         <label for="password" class="required">New Password:</label>
                     </div>
                     <div class="span8 pull-right controls-right-padding btn-padding-left">
-                        @Html.TextBoxFor(m => m.newPassword, new { @class = "input-block-level gray-border", type="password",  maxlength = "30",  placeholder = "New Password" })
+                        @Html.TextBoxFor(m => m.newPassword, new { @class = "input-block-level gray-border contact_margin", type = "password", maxlength = "30", placeholder = "New Password" })
                         @Html.ValidationMessageFor(m => m.newPassword, string.Empty, new { @class = "validation-summary-errors" })
                         <br />
                     </div>
@@ -74,7 +74,7 @@
                         <label for="password" class="required">Confirm New Password:</label>
                     </div>
                     <div class="span8 pull-right controls-right-padding btn-padding-left ">
-                        @Html.TextBoxFor(m => m.confirmpassword, new { @class = "input-block-level gray-border", type = "password", maxlength = "30", placeholder = "Confirm Password" })
+                        @Html.TextBoxFor(m => m.confirmpassword, new { @class = "input-block-level gray-border contact_margin", type = "password", maxlength = "30", placeholder = "Confirm Password" })
                         @Html.ValidationMessageFor(m => m.confirmpassword, string.Empty, new { @class = "validation-summary-errors" })
                         <br />
                     </div>
