--- a/MiraiConsultMVC/Views/User/ForgotPassword.cshtml
+++ b/MiraiConsultMVC/Views/User/ForgotPassword.cshtml
@@ -18,13 +18,13 @@
                     @if (!String.IsNullOrEmpty(ViewBag.Msg) && ViewBag.success == "true")
                     {
                         <div id="message" class="alert alert-success">
-                            <label id="lblError">@ViewBag.Msg</label>
+                            <label id="lblError" class="success_message_color">@ViewBag.Msg</label>
                         </div>
                     }
                     @if (!String.IsNullOrEmpty(ViewBag.Msg) && ViewBag.success == "false")
                     {
                         <div id="message" class="alert alert-error">
-                            <label id="lblError">@ViewBag.Msg</label>
+                            <label id="lblError" class="error_message_color">@ViewBag.Msg</label>
                         </div>
                     }
                 </div>
@@ -48,7 +48,7 @@
                                 <label class="required">Email ID:</label>
                             </div>
                             <div class="span8 pull-right btn-padding-left controls-right-padding">
-                                @Html.TextBoxFor(m => m.Email, new { @class = "input-block-level gray-border", maxlength = "50", placeholder = "Email ID" })<br />
+                                @Html.TextBoxFor(m => m.Email, new { @class = "input-block-level gray-border contact_margin", maxlength = "50", placeholder = "Email ID" })<br />
                                 @Html.ValidationMessageFor(m => m.Email, string.Empty, new { @class = "validation-summary-errors" })
                             </div>
                         </div>
