--- a/MiraiConsultMVC/Views/User/Login.cshtml
+++ b/MiraiConsultMVC/Views/User/Login.cshtml
@@ -23,7 +23,7 @@
                                         @if (!String.IsNullOrEmpty(ViewBag.errorMsg))
                                         {
                                             <div id="message" class="alert alert-error">
-                                                <label id="lblError">@ViewBag.errorMsg</label>
+                                                <label id="lblError" class="error_message_color">@ViewBag.errorMsg</label>
                                             </div>
                                         }
                                     </div>
@@ -36,27 +36,29 @@
                          @Html.AntiForgeryToken()
                          @Html.ValidationSummary(true)
                     <div class="row-fluid">
-                        <div class="span12">
-                            <div class="span4 pull-left btn-padding-left">
-                                <label class="control-label required form-horizontal control-label">Email ID:</label>
-                                </div>
-                                <div class="span8 pull-right btn-padding-left controls-right-padding">
-                                    @Html.TextBoxFor(m => m.Email, new { @class = "input-block-level gray-border txt-position", maxlength = "40", textmode = "text", placeholder = "Email" })
-                                    @Html.ValidationMessageFor(m => m.Email, string.Empty, new { @class = "validation-summary-errors" })
-                                </div>
+                    <div class="span12">
+                        <div class="span4 pull-left btn-padding-left">
+                            <label class="control-label required form-horizontal control-label">Email ID:</label>
                             </div>
+                            <div class="span8 pull-right btn-padding-left controls-right-padding">
+                                @Html.TextBoxFor(m => m.Email, new { @class = "input-block-level gray-border txt-position contact_margin", maxlength = "40", textmode = "text", placeholder = "Email", display = "dynamic" })
+                                @Html.ValidationMessageFor(m => m.Email, string.Empty, new { @class = "validation-summary-errors" })
+                            </div>
+                        </div>
                     </div>
+                    <br/>
                     <div class="row-fluid">
                         <div class="span12">
                             <div class="span4 pull-left btn-padding-left">
                                 <label class="control-label required form-horizontal control-label">Password:</label>
                                 </div>
                             <div class="span8 pull-right btn-padding-left controls-right-padding">
-                                @Html.TextBoxFor(m => m.Password, new { @class = "input-block-level gray-border txt-position", maxlength = "30", type = "Password", placeholder = "Password" })
+                                @Html.TextBoxFor(m => m.Password, new { @class = "input-block-level gray-border txt-position contact_margin", maxlength = "30", type = "Password", placeholder = "Password" })
                                 @Html.ValidationMessageFor(m => m.Password, string.Empty, new { @class = "validation-summary-errors" })
                             </div>
                         </div>
                     </div>
+                     <br/>
                     <div class="row-fluid">
                         <div class="span12 btn-padding-left">
                             <div class="span8 pull-right btn-padding-left controls-right-padding offset4">
